# email-relay-api

./: Cargo.toml  Dockerfile  README.md
src/: config.rs  main.rs
src/v1/: mod.rs  sendmail.rs
