[package]
name = "email-relay-api"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
anyhow = "1.0.80"
futures = "0.3.30"
lettre = { version = "0.11.4", default-features = false, features = ["tokio1-rustls-tls", "pool", "smtp-transport", "file-transport", "hostname", "builder"] }
serde = {version = "1", features=["derive"]}
serde_json = "1.0"
